removed references to syndication

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="/css/lib/bootstrap-responsive.min.css" />
 </head>
 <body>
-  <script type="text/javascript" src="/js/lib/require.js" data-main="/js/SyndicationReporting.js"></script>
+  <script type="text/javascript" src="/js/lib/require.js" data-main="/js/App.js"></script>
 </body>
 </html>
