--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/lib/bootstrap.min.css" />
   <link rel="stylesheet" href="/css/lib/bootstrap-responsive.min.css" />
+  <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
   <script type="text/javascript" src="/js/lib/require.js" data-main="/js/App.js"></script>
