--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/css/lib/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/lib/bootstrap-responsive.min.css" />
-  <link rel="stylesheet" href="/css/style.css" />
-</head>
-<body>
-  <script type="text/javascript" src="/js/lib/require.js" data-main="/js/App.js"></script>
-</body>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Ember-amd-starter by b3nj4m</title>
+
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/pygment_trac.css">
+    <script src="js/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <script type="text/javascript" src="/js/lib/require.js" data-main="/js/App.js"></script>
+  </body>
 </html>
