--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <![endif]-->
   </head>
   <body>
-    <script type="text/javascript" src="/js/lib/require.js" data-main="js/App.js"></script>
+    <script type="text/javascript" src="js/lib/require.js" data-main="js/App.js"></script>
   </body>
 </html>
